<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="betianaminio.firebaseauthemailandpassword_public.views.MainActivity">

    <LinearLayout
        android:id="@+id/main_layout_wrapper"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/main_text_view_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:text="@string/main_welcome"
            android:textSize="24sp" />

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/main_image_user"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/sign_in_picture_form_content_description"
            android:scaleType="centerCrop"
            app:civ_border_color="#00000000"
            app:civ_border_width="2dp"
            app:srcCompat="@drawable/profile_icon" />


        <TextView
            android:id="@+id/main_text_view_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/main_user"
            android:textSize="24sp" />

    </LinearLayout>

    <Button
        android:id="@+id/main_button_log_out"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onLogOutClicked"
        android:text="@string/main_log_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/custom_button"/>

</android.support.constraint.ConstraintLayout>
