<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingEnd="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingStart="16dp"
    tools:context="betianaminio.firebaseauthemailandpassword_public.views.LoginActivity">


    <LinearLayout
        android:id="@+id/log_in_main_wrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.495">

        <TextView
            android:id="@+id/login_form_text_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/login_form_title"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_form_text_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:theme="@style/custom_floating_label_appearance"
            android:textColorHint="@android:color/white"
            app:errorTextAppearance="@style/custom_floating_label_error_appearance"
            app:hintTextAppearance="@style/custom_floating_label_appearance">

            <EditText
                android:id="@+id/login_form_edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/login_form_email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_form_text_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textColorHint="@android:color/white"
            android:theme="@style/custom_floating_label_appearance"
            app:errorTextAppearance="@style/custom_floating_label_error_appearance"
            app:hintTextAppearance="@style/custom_floating_label_appearance"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@android:color/white">

            <EditText
                android:id="@+id/login_form_edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/log_in_form_password"
                android:inputType="textPassword"
                android:nextFocusForward="@+id/login_form_button_log_in"
                android:textColor="@android:color/white" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login_form_button_log_in"
            style="@style/custom_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:onClick="onLoginClicked"
            android:text="@string/log_in_form_button" />

        <TextView
            android:id="@+id/login_form_text_view_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:text="@string/log_in_form_sign_up"
            android:textColor="@android:color/white"
            android:textIsSelectable="true"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/log_in_authenticating_wrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/log_in_text_view_authenticating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/log_in_form_authenticating"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <ProgressBar
            android:id="@+id/log_in_progress_bar_authenticating"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminateTint="@android:color/white"
            android:indeterminateTintMode="src_in"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
