<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_in_form_picture_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="betianaminio.firebaseauthemailandpassword_public.views.SignInPicutreActivity">

    <LinearLayout
        android:id="@+id/sign_in_picture_wrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/sign_in_picture_text_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:text="@string/sign_in_form_picture_choose_image"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/sign_in_form_picture_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/profile_icon"
            android:contentDescription="@string/sign_in_picture_form_content_description"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_icon"
            app:civ_border_color="#00000000"
            app:civ_border_width="2dp"
            app:srcCompat="@drawable/profile_icon" />


        <RelativeLayout
            android:id="@+id/sign_in_form_picture_buttons_wrapper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/sign_in_form_picture_button_search"
                style="@style/search_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="false"
                android:layout_alignParentRight="false"
                android:layout_centerHorizontal="true"
                android:gravity="center_vertical|center_horizontal"
                android:onClick="onSearchFileClicked"
                android:text="@string/sign_in_form_search_file" />

        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/sign_in_form_picture_button_create_account"
        style="@style/custom_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onCreateAccountClick"
        android:text="@string/sign_in_form_create_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <LinearLayout
        android:id="@+id/sign_in_picture_creating_account_wrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/sign_in_picture_text_view_creating_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/sign_in_picture_form_creating_account"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/sign_in_picture_progress_bar_creating"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_picture_progress_bar_creating" />

        <ProgressBar
            android:id="@+id/sign_in_picture_progress_bar_creating"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminateTint="@android:color/white"
            android:indeterminateTintMode="src_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
